# TodoAcorde

./: README.md  build.gradle.kts  local - copia.properties  settings.gradle.kts
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: fft_processing.cpp
app/src/main/res/anim/: fragment_fade_in.xml  fragment_fade_out.xml
app/src/main/res/color/: bg_achievement_selector.xml  selector_color.xml
app/src/main/res/drawable/: bg_bottomsheet_handle.xml  bg_frequency_box.xml  bg_gauge_placeholder.xml  bg_lyrics_container.xml  bg_tier_row_completed.xml  bg_tier_row_locked.xml  bg_tier_row_unlocked.xml  bg_tuning_bar_rounded.xml  bs_handle.xml  button_outline.xml  card_background.xml  circle_background.xml  circle_cream_black.xml  circle_filled.xml  circle_filled_strong.xml  circle_red_shape.xml  circle_shape.xml  circle_translucent_selected.xml  circle_translucent_unselected.xml  circle_unfilled.xml  custom_progress_bar.xml  custom_progress_bar_green.xml  divider_thin.xml  heart_regular_full.xml  heart_solid_full.xml  ic_add_circle_outline_24.xml  ic_audio_tools.xml  ic_close_24.xml  ic_expand_less.xml  ic_expand_more.xml  ic_guitar.xml  ic_medal_bronze.xml  ic_medal_bronze_completed.xml  ic_medal_gold.xml  ic_medal_gold_completed.xml  ic_medal_silver.xml  ic_medal_silver_completed.xml  ic_mic.xml  ic_mic_mute.xml  ic_pause_24.xml  (+25 more)
app/src/main/res/layout/: activity_main.xml  activity_main_container.xml  activity_practice_chords.xml  activity_practice_menu.xml  activity_songs.xml  dialog_chord.xml  dialog_scale_tiers.xml  fragment_achievements.xml  (+22 more)
(+381 files in other folders)
